# simple-config-server-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: ui.html
