[package]
name = "secure-config-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
once_cell = "1.21"
mime_guess = "2.0"
base64 = "0.22"
thiserror = "2.0"
http = "1.4"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

